@@ -2,6 +2,9 @@
 TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
+Work In Progress:
+. (kfsone) Import reports stats on completion (so its more obvious it worked)
+
 v6.4.0 Jan 01 2015
 . (kfsone) Added "rare" sub-command,
 . (kfsone) Added RareItem table,
